
package controller;

import java.io.IOException;
import java.io.PrintWriter;
import javax.servlet.RequestDispatcher;
import javax.servlet.ServletException;
import javax.servlet.annotation.WebServlet;
import javax.servlet.http.HttpServlet;
import javax.servlet.http.HttpServletRequest;
import javax.servlet.http.HttpServletResponse;
import model.Device;
import services.DeviceService;

@WebServlet(name = "EditDeviceServlet",urlPatterns = "/edit-device")
public class EditDeviceServlet extends HttpServlet {

    
    @Override
    protected void doGet(HttpServletRequest req, HttpServletResponse resp)
            throws ServletException, IOException {
        String maLK = req.getQueryString();
        req.setAttribute("MALK", maLK);
        RequestDispatcher dispatcher = req.getRequestDispatcher("view/form-editLK.jsp");
        dispatcher.forward(req,resp);
    }

    
    @Override
    protected void doPost(HttpServletRequest req, HttpServletResponse resp)
            throws ServletException, IOException {
        
        Device device = new Device();
        device.setMaLK(Integer.parseInt(req.getParameter("MALK")));
        device.setTenLK(req.getParameter("TENLK"));
        device.setNsx(req.getParameter("NSX"));
        device.setGiaLK(Integer.parseInt(req.getParameter("GIALK")));
        
        //update vào DB
        DeviceService deviceService = new DeviceService();

        deviceService.editDevice(device);

        resp.sendRedirect(req.getContextPath() + "/list-device");
        }
    
    }
